--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <h1>Welcome to our project</h1>
         <h2>We make <span class="typed" data-typed-items="beautiful Bicycles, functional Bicycles, Innovative Bicycles"></span></h2>
         <div class="actions">
-          <a href="https://cet.edu.in" class="btn-get-started" target="_blank">College Website</a>
-          <a href="https://hcldboutr.wixsite.com/home" class="btn-services" target="_blank">Our Project</a>
+          <a href="https://hcldboutr.wixsite.com/home" class="btn-get-started" target="_blank">Our Project</a>
+          <a href="https://cet.edu.in" class="btn-services" target="_blank">University Website</a>
         </div>
       </div>
     </div>
